<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/txt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:hint="@string/user"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:text="@string/error"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorAccent"
        android:onClick="Listener"
        android:text="@string/jugar"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/records"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/holo_orange_light"
        android:onClick="Listener"
        android:text="@string/records" />

</LinearLayout>