<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Game">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/topo_gone"
            android:onClick="increaseScore" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/topo_gone"
            android:onClick="increaseScore" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/topo_gone"
            android:onClick="increaseScore" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/topo_gone"
            android:onClick="increaseScore" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/topo_gone"
            android:onClick="increaseScore" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/topo_gone"
            android:onClick="increaseScore" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/topo_gone"
            android:onClick="increaseScore" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/topo_gone"
            android:onClick="increaseScore" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/topo_gone"
            android:onClick="increaseScore" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="102dp"
            android:layout_height="139dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/tiempo"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/puntos"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:onClick="dialogRestartGame"
                android:text="@string/reiniciar"
                android:textAlignment="center"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textStyle="bold|italic" />
</LinearLayout>